; ModuleID = '/home/carl/AnghaBench/h2o/lib/http3/extr_common.c_h2o_http3_send_qpack_header_ack.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/http3/extr_common.c_h2o_http3_send_qpack_header_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.st_h2o_http3_egress_unistream_t* }
%struct.st_h2o_http3_egress_unistream_t = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_http3_send_qpack_header_ack(%struct.TYPE_7__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.st_h2o_http3_egress_unistream_t*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load %struct.st_h2o_http3_egress_unistream_t*, %struct.st_h2o_http3_egress_unistream_t** %11, align 8
  store %struct.st_h2o_http3_egress_unistream_t* %12, %struct.st_h2o_http3_egress_unistream_t** %7, align 8
  %13 = load %struct.st_h2o_http3_egress_unistream_t*, %struct.st_h2o_http3_egress_unistream_t** %7, align 8
  %14 = icmp ne %struct.st_h2o_http3_egress_unistream_t* %13, null
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load %struct.st_h2o_http3_egress_unistream_t*, %struct.st_h2o_http3_egress_unistream_t** %7, align 8
  %18 = getelementptr inbounds %struct.st_h2o_http3_egress_unistream_t, %struct.st_h2o_http3_egress_unistream_t* %17, i32 0, i32 1
  %19 = load i8*, i8** %5, align 8
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @h2o_buffer_append(i32* %18, i8* %19, i64 %20)
  %22 = load %struct.st_h2o_http3_egress_unistream_t*, %struct.st_h2o_http3_egress_unistream_t** %7, align 8
  %23 = getelementptr inbounds %struct.st_h2o_http3_egress_unistream_t, %struct.st_h2o_http3_egress_unistream_t* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @quicly_stream_sync_sendbuf(i32 %24, i32 1)
  %26 = call i32 @H2O_HTTP3_CHECK_SUCCESS(i32 %25)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @h2o_buffer_append(i32*, i8*, i64) #1

declare dso_local i32 @H2O_HTTP3_CHECK_SUCCESS(i32) #1

declare dso_local i32 @quicly_stream_sync_sendbuf(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
